<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:inputType="text"
        android:id="@+id/etNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_nama"
        android:layout_marginTop="40dp" />

    <EditText
        android:inputType="text"
        android:id="@+id/etAlamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_alamat"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btnIntentExplicit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_explicit"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btnIntentBundle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_bundle"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btnIntentParcelable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_parcelable"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btnImplicit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_implicit"
        android:layout_marginTop="10dp" />




</LinearLayout>