<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonActivity">

    <TextView
        android:id="@+id/nama"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"/>

    <TextView
        android:id="@+id/tvNama"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nama_saya"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/nama"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/alamat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/alamat"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/nama"
        app:layout_constraintTop_toBottomOf="@id/nama"
        app:layout_constraintEnd_toEndOf="@id/guideline" />

    <TextView
        android:id="@+id/tvAlamat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/alamat_saya"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/alamat"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35"/>


</androidx.constraintlayout.widget.ConstraintLayout>